--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "netsh-rule",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "author": "Max Zakharzhevskiy",
     "description": "Utility to generate a batch file to manage inbound and outbound Windows firewall connections for a single exe file or all exe files in folder",
     "license": "MIT",
-    "main": "dist/index.js",
-    "bin": "dist/index.js",
+    "main": "dist/cli.js",
+    "bin": "dist/cli.js",
     "files": [
         "dist/**/*"
     ],
