Fix trailing slash in folder case

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,8 @@
                 //"--program", "C:/Program Files/Bulk Rename Utility",
                 //"C:/Program Files/Bulk Rename Utility",
                 //"C:/Program Files/Adobe/Adobe Illustrator CC 2017",
-                "C:/Program Files/Adobe/Adobe Photoshop CC 2017",
+                //"C:/Program Files/Adobe/Adobe Photoshop CC 2017",
+                "C:/Program Files/Autodesk/Maya2016/", 
                 //"C:/Program Files/Adobe/Adobe Photoshop CC 2017/sniffer.exe",
                 //"C:\\Program Files\\Adobe\\Adobe Photoshop CC 2017\\sniffer.exe",
                 //"C:\\Program Files\\Adobe\\Adobe Photoshop CC 2017\\Photoshop.exe",
