--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     },
     "dependencies": {
         "chalk": "^4.1.0",
-        "minimist": "^1.2.5"
+        "minimist": "1.2.7"
     },
     "devDependencies": {
-        "@types/node": "^14.0.14"
+        "@types/node": "18.11.9"
     },
     "repository": {
         "type": "git",
