--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "author": "Max Zakharzhevskiy",
     "description": "Utility to generate a batch file to manage inbound and outbound Windows firewall connections for a single exe file or all exe files in folder",
     "license": "MIT",
-    "main": "dist/cli.js",
-    "bin": "dist/cli.js",
-    "files": [
-        "dist/**/*"
-    ],
     "engines": {
         "node": ">=10.16.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/maxzz/netsh-rule.git"
+    },
+    "bugs": {
+        "url": "https://github.com/maxzz/netsh-rule/issues"
     },
     "keywords": [
         "generate",
@@ -20,11 +22,11 @@
         "javascript",
         "typescript"
     ],
-    "scripts": {
-        "dev": "tsc -w",
-        "build": "rm -rf dist && tsc",
-        "prepublish": "yarn build"
-    },
+    "main": "dist/cli.js",
+    "bin": "dist/cli.js",
+    "files": [
+        "dist/**/*"
+    ],
     "dependencies": {
         "chalk": "^4.1.0",
         "minimist": "1.2.7"
@@ -32,11 +34,9 @@
     "devDependencies": {
         "@types/node": "18.11.9"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/maxzz/netsh-rule.git"
-    },
-    "bugs": {
-        "url": "https://github.com/maxzz/netsh-rule/issues"
+    "scripts": {
+        "dev": "tsc -w",
+        "build": "rm -rf dist && tsc",
+        "prepublish": "pnpm build"
     }
 }
