--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "minimist": "1.2.8"
     },
     "devDependencies": {
-        "@types/node": "24.3.0"
+        "@types/node": "24.3.0",
+        "ts-node": "^10.9.2"
     },
     "scripts": {
         "dev": "tsc -w",
