--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "javascript",
         "typescript"
     ],
+    "type": "module",
     "main": "dist/cli.js",
     "bin": "dist/cli.js",
     "files": [
@@ -39,8 +40,7 @@
     },
     "scripts": {
         "dev": "tsc -w",
-        "build": "rm -rf dist && tsc",
-        "prepublish": "pnpm build",
-        "build2": "tsup src/index.ts --format cjs,esm --dts --clean --sourcemap"
+        "build": "tsup src/index.ts src/cli.ts --format cjs,esm --dts --clean --sourcemap",
+        "prepublish": "pnpm build"
     }
 }
