--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
     "compilerOptions": {
-        "target": "ES2019",
-        "module": "commonjs",
-        "sourceMap": true,
+        "target": "es2022",
+        "module": "esnext",
+        "moduleResolution": "node",
+
+        //"sourceMap": true,
         "outDir": "./dist",
         "esModuleInterop": true,
 
