--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     },
     "scripts": {
         "dev": "tsc -w",
-        "build": "tsup src/index.ts src/cli.ts --format cjs,esm --dts --clean --sourcemap",
+        "build": "tsup src/index.ts src/cli.ts --format esm --clean --sourcemap",
         "prepublish": "pnpm build"
     }
 }
