--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "javascript",
         "typescript"
     ],
-    "type": "module",
+    "_type": "module",
     "main": "dist/cli.js",
     "bin": "dist/cli.js",
     "files": [
@@ -40,7 +40,7 @@
     },
     "scripts": {
         "dev": "tsc -w",
-        "build": "tsup src/index.ts src/cli.ts --format esm --clean --sourcemap",
+        "build": "tsup src/index.ts src/cli.ts --format cjs --clean --sourcemap",
         "prepublish": "pnpm build"
     }
 }
