--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
     "compilerOptions": {
         "target": "es2022",
         "module": "esnext",
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
 
         //"sourceMap": true,
-        "outDir": "./dist",
+        // "outDir": "./dist",
         "esModuleInterop": true,
 
         "forceConsistentCasingInFileNames": true,
