--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
         "target": "es2022",
-        "module": "esnext",
-        "moduleResolution": "bundler",
+        "module": "commonjs",
+        "moduleResolution": "node",
 
         //"sourceMap": true,
         // "outDir": "./dist",
