--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         //"sourceMap": true,
         // "outDir": "./dist",
         "esModuleInterop": true,
+        "noEmit": true,
 
         "forceConsistentCasingInFileNames": true,
     }
