--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
         // "outDir": "./dist",
         "esModuleInterop": true,
         "noEmit": true,
-
         "forceConsistentCasingInFileNames": true,
-    }
+    },
+    "include": [
+        "src"
+    ],
 }
